# e-commerce-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/domain/: architecture.md  db-entities.md
.claude/project/: general-guidelines.md  tests.md
.run/: Python tests in e2e.run.xml  Python tests in integration.run.xml
app/: main.py
app/api/: dependencies.py  schemas.py
app/api/routes/: products.py
app/domain/: exceptions.py
app/domain/models/: __init__.py  product.py  system.py
app/domain/ports/repositories/: __init__.py  counter.py  product.py
app/domain/services/: exceptions.py  utils.py
app/domain/services/product/: main.py  utils.py
app/settings/: __init__.py  base.py  development.py  e2e.py  environments.py
infra/: exceptions.py
infra/adapters/: exceptions.py
infra/adapters/logging/: __init__.py
infra/adapters/repositories/: __init__.py  exceptions.py  sql_product.py  sql_product_repository.py  sql_system.py
infra/db/: __init__.py  cli.py  connection.py
infra/docker/local/: docker-compose.yaml
tests/e2e/: conftest.py
tests/e2e/api/: conftest.py  test_product.py
tests/integration/: conftest.py
tests/integration/infra/repositories/: conftest.py  test_sql_system.py
tests/unit/: conftest.py
tests/unit/domain/services/product/: test_utils.py
tests/unit/infra/adapters/repositories/: test_sql_product_repository.py
