[project]
name = "e-commerce-api"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["app", "infra"]

[project.scripts]
db-setup = "infra.db.cli:db_setup"
