[project]
name = "e-commerce-api"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "pydantic-settings>=2.11.0",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["app"]

[project.scripts]
db-setup = "app.external.db.cli:db_setup"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
